--- a/_scss/_components-billboard.scss
+++ b/_scss/_components-billboard.scss
@@ -29,7 +29,7 @@
     
     
     @include media-query(portable) {
-        padding: 50px 0 50px 25px;
+        padding: 50px 0 25px 25px;
     }
 }
 
